--- a/pages/practices.html
+++ b/pages/practices.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Практики</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-$END$
+<div class="page-container">
+    <div class="header">Хэдер</div>
+
+    <div class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+            <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+            <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+            <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <h1 class="section-title">Практические занятия</h1>
+
+        <ul class="practices-list">
+            <li>Практическое занятие 7: Основы языка HTML</li>
+            <!-- В задании упоминаются дополнительные практики; здесь перечислены названия согласно материалу. -->
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 8: Основы языка HTML</li>
+            <!-- В задании упоминаются дополнительные практики; здесь перечислены названия согласно материалу. -->
+        </ul>
+
+    </div>
+
+    <div class="footer">Футер</div>
+</div>
 </body>
 </html>
