--- a/index.html
+++ b/index.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Семестровая работа</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-$END$
+<div class="page-container">
+    <div class="header">Хэдер</div>
+
+    <div class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/practices.html">Практики</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <div class="profile-header">
+            <h1 class="profile-title">Информация об авторе</h1>
+
+            <img class="profile-photo" src="images/photo.png" alt="Фото автора">
+            <h2 class="profile-name">Демина Екатерина Андреевна</h2>
+            <p class="profile-group">ЭФБО-04-24</p>
+        </div>
+
+        <div class="about-me">
+            <p>Студент МИРЭА. Учусь на факультете "Фуллстек-разработчик"</p>
+        </div>
+
+        <div class="skills-container">
+            <div class="skill-tag">Java</div>
+            <div class="skill-tag">Python</div>
+            <div class="skill-tag">C++</div>
+            <div class="skill-tag">C#</div>
+        </div>
+
+        <div class="experience-section">
+            <h2 class="section-title">Мой опыт работы</h2>
+            <div class="experience-card">
+                <h3 class="experience-title">Опыт 1</h3>
+                <p class="experience-desc">Создала игру виселица.</p>
+            </div>
+            <div class="experience-card">
+                <h3 class="experience-title">Опыт 2</h3>
+                <p class="experience-desc">Сдала практички по алгоритмам.</p>
+            </div>
+            <div class="experience-card">
+                <h3 class="experience-title">Опыт 3</h3>
+                <p class="experience-desc">Создала телеграм бота.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">Футер</div>
+</div>
 </body>
 </html>
