--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Контакты</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
+<div class="page-container">
+    <div class="header">Хэдер</div>
 
+    <div class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+            <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+            <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+            <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <h1 class="section-title">Контакты</h1>
+
+        <div class="contact-block">
+            <p><strong>Электронная почта:</strong> example@example.com</p>
+            <p><strong>Адрес:</strong> г. Москва, ул. Примерная, д. 1</p>
+            <button class="call-button">Позвоните мне</button>
+        </div>
+    </div>
+
+    <div class="footer">Футер</div>
+</div>
 </body>
 </html>
