--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Товары</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-$END$
+<div class="page-container">
+    <div class="header">Хэдер</div>
+
+    <div class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+            <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+            <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+            <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <h1 class="section-title">Каталог товаров</h1>
+
+        <div class="goods-grid">
+            <div class="product-card">
+                <img src="../images/goods1.jpg" alt="Товар 1" class="product-photo">
+                <h3 class="product-title">Тумбочка(из пинтереста)</h3>
+                <p class="product-price">₽ 1000</p>
+            </div>
+
+            <div class="product-card">
+                <img src="../images/goods2.jpg" alt="Товар 2" class="product-photo">
+                <h3 class="product-title">Стол(из пинтереста)</h3>
+                <p class="product-price">₽ 2500</p>
+            </div>
+
+            <div class="product-card">
+                <img src="../images/goods3.jpg" alt="Товар 3" class="product-photo">
+                <h3 class="product-title">Шкаф(Тоже из пинтереста)</h3>
+                <p class="product-price">₽ 499</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">Футер</div>
+</div>
 </body>
 </html>
