--- a/pages/news.html
+++ b/pages/news.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Новости</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-$END$
+<div class="page-container">
+    <div class="header">Хэдер</div>
+
+    <div class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+            <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+            <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+            <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <h1 class="section-title">Новости</h1>
+
+        <article class="news-item">
+            <h2 class="news-title">Новая версия змеи</h2>
+            <p class="news-meta">01.01.2025 — Автор: Иванов И.</p>
+            <p class="news-text">Вышла новая версия Python!.</p>
+        </article>
+
+        <article class="news-item">
+            <h2 class="news-title">Нейросети захватывают мир!</h2>
+            <p class="news-meta">15.02.2025 — Автор: Петров П.</p>
+            <p class="news-text">Нейросеть научилась писать.</p>
+        </article>
+
+        <article class="news-item">
+            <h2 class="news-title">Новый гений C#(Оффер от майкрософт)#</h2>
+            <p class="news-meta">10.03.2025 — Автор: Сидоров С.</p>
+            <p class="news-text">Катя написала календарь на C#.</p>
+        </article>
+    </div>
+
+    <div class="footer">Футер</div>
+</div>
 </body>
 </html>
