--- a/pages/practices.html
+++ b/pages/practices.html
@@ -22,18 +22,41 @@
 
     <div class="content">
         <h1 class="section-title">Практические занятия</h1>
-
         <ul class="practices-list">
-            <li>Практическое занятие 7: Основы языка HTML</li>
-            <!-- В задании упоминаются дополнительные практики; здесь перечислены названия согласно материалу. -->
+            <li>Практическое занятие 1: знакомство со структурой сайта</li>
+
         </ul>
         <ul class="practices-list">
-            <li>Практическое занятие 8: Основы языка HTML</li>
-            <!-- В задании упоминаются дополнительные практики; здесь перечислены названия согласно материалу. -->
+            <li>Практическое занятие 2: Основы языка HTML</li>
+
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 3: Знакомство со структурой сайта</li>
+
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 4: Создание формы с заполнением данных</li>
+
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 5: Отработка полученных знаний</li>
+
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 6: Отработка полученных знаний</li>
+
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 7: Основы языка HTML</li>
+
+        </ul>
+        <ul class="practices-list">
+            <li>Практическое занятие 8: Основы языка css</li>
+
         </ul>
 
     </div>
-
+    <!---->
     <div class="footer">Футер</div>
 </div>
 </body>
