--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="page-container">
-    <div class="header">Хэдер</div>
+    <div class="header">Добро пожаловать!</div>
 
     <div class="nav">
         <ul class="nav-list">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-
+    <!---->
     <div class="footer">Футер</div>
 </div>
 </body>
