--- a/pages/practices.html
+++ b/pages/practices.html
@@ -23,7 +23,7 @@
     <div class="content">
         <h1 class="section-title">Практические занятия</h1>
         <ul class="practices-list">
-            <li>Практическое занятие 1: знакомство со структурой сайта</li>
+            <li>Практическое занятие 1: Знакомство со структурой сайта</li>
 
         </ul>
         <ul class="practices-list">
@@ -31,7 +31,7 @@
 
         </ul>
         <ul class="practices-list">
-            <li>Практическое занятие 3: Знакомство со структурой сайта</li>
+            <li>Практическое занятие 3: Работа с гитом</li>
 
         </ul>
         <ul class="practices-list">
