--- a/pages/goods.html
+++ b/pages/goods.html
@@ -27,19 +27,19 @@
             <div class="product-card">
                 <img src="../images/goods1.jpg" alt="Товар 1" class="product-photo">
                 <h3 class="product-title">Тумбочка(из пинтереста)</h3>
-                <p class="product-price">₽ 1000</p>
+                <p class="product-price">₽ 5000</p>
             </div>
 
             <div class="product-card">
                 <img src="../images/goods2.jpg" alt="Товар 2" class="product-photo">
                 <h3 class="product-title">Стол(из пинтереста)</h3>
-                <p class="product-price">₽ 2500</p>
+                <p class="product-price">₽ 9000</p>
             </div>
 
             <div class="product-card">
                 <img src="../images/goods3.jpg" alt="Товар 3" class="product-photo">
-                <h3 class="product-title">Шкаф(Тоже из пинтереста)</h3>
-                <p class="product-price">₽ 499</p>
+                <h3 class="product-title">Шкаф(тоже из пинтереста)</h3>
+                <p class="product-price">₽ 20000</p>
             </div>
         </div>
     </div>
