contact dialog + pudding

--- a/pages/goods.html
+++ b/pages/goods.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 <div class="page-container">
-    <div class="header">Хэдер</div>
+    <header class="header">
+        <h1>Товары</h1>
+    </header>
 
-    <div class="nav">
+    <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
             <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
@@ -18,33 +20,35 @@
             <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
             <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
         </ul>
-    </div>
-    <!---->
-    <div class="content">
+    </nav>
+
+    <main class="content">
         <h1 class="section-title">Каталог товаров</h1>
 
-        <div class="goods-grid">
-            <div class="product-card">
-                <img src="../images/goods1.jpg" alt="Товар 1" class="product-photo">
-                <h3 class="product-title">Тумбочка(из пинтереста)</h3>
+        <div class="products-grid">
+            <article class="product-card">
+                <img src="../images/goods1.jpg" alt="Товар 1" class="product-image">
+                <h3 class="product-name">Тумбочка(из пинтереста)</h3>
                 <p class="product-price">₽ 5000</p>
-            </div>
+            </article>
 
-            <div class="product-card">
-                <img src="../images/goods2.jpg" alt="Товар 2" class="product-photo">
-                <h3 class="product-title">Стол(из пинтереста)</h3>
+            <article class="product-card">
+                <img src="../images/goods2.jpg" alt="Товар 2" class="product-image">
+                <h3 class="product-name">Стол(из пинтереста)</h3>
                 <p class="product-price">₽ 9000</p>
-            </div>
+            </article>
 
-            <div class="product-card">
-                <img src="../images/goods3.jpg" alt="Товар 3" class="product-photo">
-                <h3 class="product-title">Шкаф(тоже из пинтереста)</h3>
+            <article class="product-card">
+                <img src="../images/goods3.jpg" alt="Товар 3" class="product-image">
+                <h3 class="product-name">Шкаф(тоже из пинтереста)</h3>
                 <p class="product-price">₽ 20000</p>
-            </div>
+            </article>
         </div>
-    </div>
+    </main>
 
-    <div class="footer">Футер</div>
+    <footer class="footer">
+        <p>Футер</p>
+    </footer>
 </div>
 </body>
 </html>
