--- a/pages/practices.html
+++ b/pages/practices.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 <div class="page-container">
-    <div class="header">Хэдер</div>
+    <header class="header">
+        <h1>Практические занятия</h1>
+    </header>
 
-    <div class="nav">
+    <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
             <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
@@ -18,46 +20,57 @@
             <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
             <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
         </ul>
-    </div>
+    </nav>
 
-    <div class="content">
+    <main class="content">
         <h1 class="section-title">Практические занятия</h1>
-        <ul class="practices-list">
-            <li>Практическое занятие 1: Знакомство со структурой сайта</li>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 2: Основы языка HTML</li>
+        <div class="practices-grid">
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 1</h3>
+                <p class="practice-desc">Знакомство со структурой сайта</p>
+            </article>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 3: Работа с гитом</li>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 2</h3>
+                <p class="practice-desc">Основы языка HTML</p>
+            </article>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 4: Создание формы с заполнением данных</li>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 3</h3>
+                <p class="practice-desc">Работа с гитом</p>
+            </article>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 5: Отработка полученных знаний</li>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 4</h3>
+                <p class="practice-desc">Создание формы с заполнением данных</p>
+            </article>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 6: Отработка полученных знаний</li>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 5</h3>
+                <p class="practice-desc">Отработка полученных знаний</p>
+            </article>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 7: Основы языка HTML</li>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 6</h3>
+                <p class="practice-desc">Отработка полученных знаний</p>
+            </article>
 
-        </ul>
-        <ul class="practices-list">
-            <li>Практическое занятие 8: Основы языка css</li>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 7</h3>
+                <p class="practice-desc">Основы языка HTML</p>
+            </article>
 
-        </ul>
+            <article class="practice-card">
+                <h3 class="practice-title">Практическое занятие 8</h3>
+                <p class="practice-desc">Основы языка CSS</p>
+            </article>
+        </div>
+    </main>
 
-    </div>
-    <!---->
-    <div class="footer">Футер</div>
+    <footer class="footer">
+        <p>Фугер</p>
+    </footer>
 </div>
 </body>
 </html>
