--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 <div class="page-container">
-    <div class="header">Добро пожаловать!</div>
+    <header class="header">
+       <h1> Добро пожаловать!</h1>
+    </header>
 
-    <div class="nav">
+    <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
@@ -18,46 +20,53 @@
             <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
         </ul>
-    </div>
+    </nav>
 
-    <div class="content">
-        <div class="profile-header">
+    <main class="content">
+        <article class="profile-header">
             <h1 class="profile-title">Информация об авторе</h1>
 
             <img class="profile-photo" src="images/photo.png" alt="Фото автора">
             <h2 class="profile-name">Демина Екатерина Андреевна</h2>
             <p class="profile-group">ЭФБО-04-24</p>
-        </div>
+        </article>
 
         <div class="about-me">
             <p>Студент МИРЭА. Учусь на факультете "Фуллстек-разработчик"</p>
         </div>
 
-        <div class="skills-container">
-            <div class="skill-tag">Java</div>
-            <div class="skill-tag">Python</div>
-            <div class="skill-tag">C++</div>
-            <div class="skill-tag">C#</div>
-        </div>
+        <section class="skills-container">
+            <h2>Мои навыки</h2>
+            <div class="skills-grid">
+                <div class="skill-tag">Java</div>
+                <div class="skill-tag">Python</div>
+                <div class="skill-tag">C++</div>
+                <div class="skill-tag">C#</div>
+            </div>
+        </section>
 
-        <div class="experience-section">
+        <section class="experience-section">
             <h2 class="section-title">Мой опыт работы</h2>
-            <div class="experience-card">
-                <h3 class="experience-title">Опыт 1</h3>
-                <p class="experience-desc">Создала игру виселица.</p>
+            <div class="experience-grid">
+                <article class="experience-card">
+                    <h3 class="experience-title">Опыт 1</h3>
+                    <p class="experience-desc">Создала игру виселица.</p>
+                </article>
+                <article class="experience-card">
+                    <h3 class="experience-title">Опыт 2</h3>
+                    <p class="experience-desc">Сдала практички по алгоритмам.</p>
+                </article>
+                <article class="experience-card">
+                    <h3 class="experience-title">Опыт 3</h3>
+                    <p class="experience-desc">Создала телеграм бота.</p>
+                </article>
             </div>
-            <div class="experience-card">
-                <h3 class="experience-title">Опыт 2</h3>
-                <p class="experience-desc">Сдала практички по алгоритмам.</p>
-            </div>
-            <div class="experience-card">
-                <h3 class="experience-title">Опыт 3</h3>
-                <p class="experience-desc">Создала телеграм бота.</p>
-            </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <!---->
-    <div class="footer">Футер</div>
+    <footer class="footer">
+        <p>Футер</p>
+    </footer>
 </div>
 </body>
 </html>
