--- a/pages/news.html
+++ b/pages/news.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 <div class="page-container">
-    <div class="header">Хэдер</div>
+    <header class="header">
+        <h1>Новости</h1>
+    </header>
 
-    <div class="nav">
+    <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
             <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
@@ -18,31 +20,35 @@
             <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
             <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
         </ul>
-    </div>
+    </nav>
 
-    <div class="content">
+    <main class="content">
         <h1 class="section-title">Новости</h1>
 
-        <article class="news-item">
-            <h2 class="news-title">Новая версия змеи</h2>
-            <p class="news-meta">01.01.2025 — Автор: Иванов И.</p>
-            <p class="news-text">Вышла новая версия Python!.</p>
-        </article>
+        <div class="news-container">
+            <article class="news-card">
+                <h2 class="news-title">Новая версия змеи</h2>
+                <p class="news-meta">01.01.2025 — Автор: Иванов И.</p>
+                <p class="news-text">Вышла новая версия Python!.</p>
+            </article>
 
-        <article class="news-item">
-            <h2 class="news-title">Нейросети захватывают мир!</h2>
-            <p class="news-meta">15.02.2025 — Автор: Петров П.</p>
-            <p class="news-text">Нейросеть научилась писать.</p>
-        </article>
+            <article class="news-card">
+                <h2 class="news-title">Нейросети захватывают мир!</h2>
+                <p class="news-meta">15.02.2025 — Автор: Петров П.</p>
+                <p class="news-text">Нейросеть научилась писать.</p>
+            </article>
 
-        <article class="news-item">
-            <h2 class="news-title">Новый гений C#(Оффер от майкрософт)#</h2>
-            <p class="news-meta">10.03.2025 — Автор: Сидоров С.</p>
-            <p class="news-text">Катя написала календарь на C#.</p>
-        </article>
-    </div>
-    <!---->
-    <div class="footer">Футер</div>
+            <article class="news-card">
+                <h2 class="news-title">Новый гений C#(Оффер от майкрософт)#</h2>
+                <p class="news-meta">10.03.2025 — Автор: Сидоров С.</p>
+                <p class="news-text">Катя написала календарь на C#.</p>
+            </article>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p>Футер</p>
+    </footer>
 </div>
 </body>
 </html>
