--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,54 +1,89 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Товары</title>
-    <link rel="stylesheet" href="../style/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body>
-<div class="page-container">
-    <header class="header">
-        <h1>Товары</h1>
+<body class="bg-light">
+<div class="container-fluid p-0">
+
+    <!-- Шапка -->
+    <header class="bg-primary text-white py-4">
+        <div class="container text-center">
+            <h1 class="h3 mb-1">Каталог товаров</h1>
+            <p class="mb-0 opacity-75">Интерьер, мебель и уют</p>
+        </div>
     </header>
 
-    <nav class="nav">
-        <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-            <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-            <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-            <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-            <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-        </ul>
+    <!-- Навигация -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="../index.html"><i class="bi bi-house me-1"></i>Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html"><i class="bi bi-newspaper me-1"></i>Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="practices.html"><i class="bi bi-code-slash me-1"></i>Практики</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="goods.html"><i class="bi bi-cart me-1"></i>Товары</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html"><i class="bi bi-telephone me-1"></i>Контакты</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <main class="content">
-        <h1 class="section-title">Каталог товаров</h1>
+    <!-- Контент -->
+    <main class="container my-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
 
-        <div class="products-grid">
-            <article class="product-card">
-                <img src="../images/goods1.jpg" alt="Товар 1" class="product-image">
-                <h3 class="product-name">Тумбочка(из пинтереста)</h3>
-                <p class="product-price">₽ 5000</p>
-            </article>
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <img src="../images/goods1.jpg" class="card-img-top" alt="Тумбочка">
+                    <div class="card-body">
+                        <h5 class="card-title">Тумбочка (из Pinterest)</h5>
+                        <p class="card-text text-muted">Стильная деревянная тумбочка в современном дизайне.</p>
+                        <span class="badge bg-success fs-6">₽ 5000</span>
+                    </div>
+                </div>
+            </div>
 
-            <article class="product-card">
-                <img src="../images/goods2.jpg" alt="Товар 2" class="product-image">
-                <h3 class="product-name">Стол(из пинтереста)</h3>
-                <p class="product-price">₽ 9000</p>
-            </article>
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <img src="../images/goods2.jpg" class="card-img-top" alt="Стол">
+                    <div class="card-body">
+                        <h5 class="card-title">Стол (из Pinterest)</h5>
+                        <p class="card-text text-muted">Минималистичный стол для офиса или учебы.</p>
+                        <span class="badge bg-success fs-6">₽ 9000</span>
+                    </div>
+                </div>
+            </div>
 
-            <article class="product-card">
-                <img src="../images/goods3.jpg" alt="Товар 3" class="product-image">
-                <h3 class="product-name">Шкаф(тоже из пинтереста)</h3>
-                <p class="product-price">₽ 20000</p>
-            </article>
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <img src="../images/goods3.jpg" class="card-img-top" alt="Шкаф">
+                    <div class="card-body">
+                        <h5 class="card-title">Шкаф (из Pinterest)</h5>
+                        <p class="card-text text-muted">Большой шкаф с раздвижными дверями и зеркалами.</p>
+                        <span class="badge bg-success fs-6">₽ 20000</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 
-    <footer class="footer">
-        <p>Футер</p>
+    <!-- Футер -->
+    <footer class="bg-dark text-white py-4 mt-5">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2025 Магазин мебели. Все права защищены.</p>
+        </div>
     </footer>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
