--- a/pages/practices.html
+++ b/pages/practices.html
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Практики</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Практические занятия</title>
     <link rel="stylesheet" href="../style/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 <div class="page-container">
+
     <header class="header">
-        <h1>Практические занятия</h1>
+        <h1 class="header__title">Практические занятия</h1>
     </header>
 
     <nav class="nav">
-        <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-            <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-            <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-            <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-            <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+        <ul class="nav__list">
+            <li class="nav__item"><a href="../index.html" class="nav__link">Главная</a></li>
+            <li class="nav__item"><a href="news.html" class="nav__link">Новости</a></li>
+            <li class="nav__item nav__item--active"><a href="practices.html" class="nav__link">Практики</a></li>
+            <li class="nav__item"><a href="goods.html" class="nav__link">Товары</a></li>
+            <li class="nav__item"><a href="contacts.html" class="nav__link">Контакты</a></li>
         </ul>
     </nav>
 
     <main class="content">
-        <h1 class="section-title">Практические занятия</h1>
+        <section class="practices">
+            <h2 class="section-title">Список практических работ</h2>
 
-        <div class="practices-grid">
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 1</h3>
-                <p class="practice-desc">Знакомство со структурой сайта</p>
-            </article>
+            <div class="news__list">
+                <article class="news-card">
+                    <h3 class="news-card__title">Практическая 1</h3>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 2</h3>
-                <p class="practice-desc">Основы языка HTML</p>
-            </article>
+                    <p class="news-card__text">Создание первой веб-страницы. Основы HTML, структура документа.</p>
+                </article>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 3</h3>
-                <p class="practice-desc">Работа с гитом</p>
-            </article>
+                <article class="news-card">
+                    <h3 class="news-card__title">Практическая 2</h3>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 4</h3>
-                <p class="practice-desc">Создание формы с заполнением данных</p>
-            </article>
+                    <p class="news-card__text">Основы HTML и работа с формами. Создание различных типов полей ввода, валидация данных.</p>
+                </article>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 5</h3>
-                <p class="practice-desc">Отработка полученных знаний</p>
-            </article>
+                <article class="news-card">
+                    <h3 class="news-card__title">Практическая 3</h3>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 6</h3>
-                <p class="practice-desc">Отработка полученных знаний</p>
-            </article>
+                    <p class="news-card__text">Знакомство с CSS.</p>
+                </article>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 7</h3>
-                <p class="practice-desc">Основы языка HTML</p>
-            </article>
+                <article class="news-card">
+                    <h3 class="news-card__title">Практическая 4</h3>
 
-            <article class="practice-card">
-                <h3 class="practice-title">Практическое занятие 8</h3>
-                <p class="practice-desc">Основы языка CSS</p>
-            </article>
-        </div>
+                    <p class="news-card__text"> Создание сложных макетов и дизайна.</p>
+                </article>
+
+                <article class="news-card">
+                    <h3 class="news-card__title">Практическая 5</h3>
+
+                    <p class="news-card__text">JavaScript основы. Переменные, функции, обработка событий.</p>
+                </article>
+
+                <article class="news-card">
+                    <h3 class="news-card__title">Практическая 6</h3>
+
+                    <p class="news-card__text">Работа с формами на JavaScript. Валидация, обработка данных, AJAX запросы.</p>
+                </article>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
-        <p>Фугер</p>
+        <p class="footer__text">&copy; 2025 Практические занятия</p>
     </footer>
+
+
 </div>
+
+
 </body>
 </html>
